--- a/WebVisualizations/comparisons.html
+++ b/WebVisualizations/comparisons.html
@@ -42,10 +42,10 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="comparison.html">Comparison</a>
+                        <a href="comparisons.html">Comparison</a>
                     </li>
                     <li>
-                        <a href="data.html">Data</a>
+                        <a href="table.html">Data</a>
                     </li>
                 </ul>
             </div>
@@ -69,7 +69,7 @@
             <hr>
 
             <section id="summary">
-                <p>Click any plot for an in-depth analysis.</p>
+                <p>Click any plot for a more in-depth analysis.</p>
             </section>
         </section>
 
