--- a/WebVisualizations/table.html
+++ b/WebVisualizations/table.html
@@ -67,7 +67,7 @@
             <div class="jumbotronTransp">
                 <h1>Valley Metro Ridership & Demographics</h1>
                 <p> The table below contains the data used for these analyses.</p>
-                <table class="table table-bordered table-condensed" style="background-color:rgb(134, 190, 184)">
+                <table class="table table-bordered table-dark" style="background-color:rgb(134, 190, 184)">
             </div>
 </body>
 
