fixed right box

--- a/WebVisualizations/comparisons.html
+++ b/WebVisualizations/comparisons.html
@@ -76,42 +76,42 @@
         <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-6">
                 <figure>
-                    <a href="poverty_weekend.html">
+                    <a href="poverty.html">
                         <img id="landing-viz" src="poverty_riders_weekend.png" alt="Ridership & Poverty Rate (Weekend)">
                     </a>
                 </figure>
             </div>
             <div class="col-xs-12 col-sm-12 col-md-6">
                 <figure>
-                    <a href="poverty_weekday.html">
+                    <a href="poverty.html">
                         <img id="landing-viz" src="poverty_riders_weekday.png" alt="Ridership & Poverty Rate (Weekday)">
                     </a>
                 </figure>
             </div>
             <div class="col-xs-12 col-sm-12 col-md-6">
                 <figure>
-                    <a href="income_weekend.html">
+                    <a href="income.html">
                         <img id="landing-viz" src="income_riders_weekend.png" alt="Ridership & Income (Weekend)">
                     </a>
                 </figure>
             </div>
             <div class="col-xs-12 col-sm-12 col-md-6">
                 <figure>
-                    <a href="income_weekday.html">
+                    <a href="income.html">
                         <img id="landing-viz" src="income_riders_weekday.png" alt="Ridership & Income (Weekday)">
                     </a>
                 </figure>
             </div>
             <div class="col-xs-12 col-sm-12 col-md-6">
                 <figure>
-                    <a href="population_weekend.html">
+                    <a href="population.html">
                         <img id="landing-viz" src="population_riders_weekend.png" alt="Ridership & Population (Weekend)">
                     </a>
                 </figure>
             </div>
             <div class="col-xs-12 col-sm-12 col-md-6">
                 <figure>
-                    <a href="population_weekday.html">
+                    <a href="population.html">
                         <img id="landing-viz" src="population_riders_weekday.png" alt="Ridership & Population (Weekday)">
                     </a>
                 </figure>
